--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -137,6 +137,9 @@
                 </div>
             </div>
         </form>
+        <footer>
+            <a href="/api/friends">API Friends</a> | <a href="https://github.com/JakeDudum/FriendFinder">GitHub Repo</a>
+        </footer>
     </div>
 
     <!-- Optional JavaScript -->
