--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -30,7 +30,8 @@
                     <div class="row">
                         <div class="col-6">
                             <div class="form-group">
-                                <label for="exampleFormControlSelect1">Example select</label>
+                                <label for="exampleFormControlSelect1">Question 1</label>
+                                <h6>Your mind is always buzzing with unexplored ideas and plans.</h6>
                                 <select class="form-control" id="exampleFormControlSelect1">
                                     <option>1(Strongly disagree)</option>
                                     <option>2</option>
@@ -40,7 +41,8 @@
                                 </select>
                             </div>
                             <div class="form-group">
-                                <label for="exampleFormControlSelect1">Example select</label>
+                                <label for="exampleFormControlSelect1">Question 2</label>
+                                <h6>Generally speaking, you rely more on your experience than your imagination.</h6>
                                 <select class="form-control" id="exampleFormControlSelect1">
                                     <option>1(Strongly disagree)</option>
                                     <option>2</option>
@@ -50,7 +52,8 @@
                                 </select>
                             </div>
                             <div class="form-group">
-                                <label for="exampleFormControlSelect1">Example select</label>
+                                <label for="exampleFormControlSelect1">Question 3</label>
+                                <h6>You find it easy to stay relaxed and focused even when there is some pressure.</h6>
                                 <select class="form-control" id="exampleFormControlSelect1">
                                     <option>1(Strongly disagree)</option>
                                     <option>2</option>
@@ -60,7 +63,8 @@
                                 </select>
                             </div>
                             <div class="form-group">
-                                <label for="exampleFormControlSelect1">Example select</label>
+                                <label for="exampleFormControlSelect1">Question 4</label>
+                                <h6>You rarely do something just out of sheer curiosity.</h6>
                                 <select class="form-control" id="exampleFormControlSelect1">
                                     <option>1(Strongly disagree)</option>
                                     <option>2</option>
@@ -70,7 +74,8 @@
                                 </select>
                             </div>
                             <div class="form-group">
-                                <label for="exampleFormControlSelect1">Example select</label>
+                                <label for="exampleFormControlSelect1">Question 5</label>
+                                <h6>People can rarely upset you.</h6>
                                 <select class="form-control" id="exampleFormControlSelect1">
                                     <option>1(Strongly disagree)</option>
                                     <option>2</option>
@@ -80,9 +85,11 @@
                                 </select>
                             </div>
                         </div>
+
                         <div class="col-6">
                             <div class="form-group">
-                                <label for="exampleFormControlSelect1">Example select</label>
+                                <label for="exampleFormControlSelect1">Question 6</label>
+                                <h6>It is often difficult for you to relate to other people’s feelings.</h6>
                                 <select class="form-control" id="exampleFormControlSelect1">
                                     <option>1(Strongly disagree)</option>
                                     <option>2</option>
@@ -92,7 +99,8 @@
                                 </select>
                             </div>
                             <div class="form-group">
-                                <label for="exampleFormControlSelect1">Example select</label>
+                                <label for="exampleFormControlSelect1">Question 7</label>
+                                <h6>In a discussion, truth should be more important than people’s sensitivities.</h6>
                                 <select class="form-control" id="exampleFormControlSelect1">
                                     <option>1(Strongly disagree)</option>
                                     <option>2</option>
@@ -102,7 +110,8 @@
                                 </select>
                             </div>
                             <div class="form-group">
-                                <label for="exampleFormControlSelect1">Example select</label>
+                                <label for="exampleFormControlSelect1">Question 8</label>
+                                <h6>You rarely get carried away by fantasies and ideas.</h6>
                                 <select class="form-control" id="exampleFormControlSelect1">
                                     <option>1(Strongly disagree)</option>
                                     <option>2</option>
@@ -112,7 +121,9 @@
                                 </select>
                             </div>
                             <div class="form-group">
-                                <label for="exampleFormControlSelect1">Example select</label>
+                                <label for="exampleFormControlSelect1">Question 9</label>
+                                <h6>You think that everyone’s views should be respected regardless of whether they are
+                                    supported by facts or not.</h6>
                                 <select class="form-control" id="exampleFormControlSelect1">
                                     <option>1(Strongly disagree)</option>
                                     <option>2</option>
@@ -122,7 +133,8 @@
                                 </select>
                             </div>
                             <div class="form-group">
-                                <label for="exampleFormControlSelect1">Example select</label>
+                                <label for="exampleFormControlSelect1">Question 10</label>
+                                <h6>You feel more energetic after spending time with a group of people.</h6>
                                 <select class="form-control" id="exampleFormControlSelect1">
                                     <option>1(Strongly disagree)</option>
                                     <option>2</option>
