--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -22,7 +22,7 @@
                     <div class="row">
                         <div class="col-12">
                             <div class="form-group">
-                                <label for="exampleFormControlInput1">Name</label>
+                                <label for="exampleFormControlInput1">Name (Required)</label>
                                 <input id="name" type="name" class="form-control" id="exampleFormControlInput1"
                                     placeholder="John Smith">
                             </div>
@@ -166,6 +166,7 @@
                 </div>
                 <div class="modal-body">
                     <p id="bestFriend">Modal body text goes here.</p>
+                    <img id="photo" src="#" alt="Your new best friend." style="height: 250px; width: 300px;">
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -204,7 +205,8 @@
                 };
 
                 $.post("/api/friends", data, function (res) {
-                    $("#bestFriend").text(res);
+                    $("#bestFriend").text(res.name);
+                    $("#photo").attr("src", res.photo);
                     $("#myModal").modal("show");
                 });
 
